fix: Allow overflow, hide scrollbar

--- a/frontend/src/styles/RecommendedProfiles.module.css
+++ b/frontend/src/styles/RecommendedProfiles.module.css
@@ -1,8 +1,16 @@
 .RecommendedProfiles__Container {
   display: flex;
   align-items: center;
-  overflow-x: hidden;
+  overflow-x: auto;
+  scrollbar-width: 0;
   padding-block: 0.5em;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.RecommendedProfiles__Container::-webkit-scrollbar {
+  display: none;
 }
 
 .RecommendedProfiles__Container:hover {
